src/objects/Endorsement__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>10K Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10K Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10K Achievement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Achievement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Achievement</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endorsed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Endorsed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Endorsements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expert_Achievement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expert Achievement</label>
        <referenceTo>Expert_Achievement__c</referenceTo>
        <relationshipLabel>Endorsements</relationshipLabel>
        <relationshipName>Endorsements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expert_Skill__c</fullName>
        <label>Expert Skill</label>
        <referenceTo>Expert_Skill__c</referenceTo>
        <relationshipLabel>Endorsements</relationshipLabel>
        <relationshipName>Endorsements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Endorsement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Expert_Skill__c</columns>
        <columns>Endorsed_By__c</columns>
        <columns>Category__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Endorsement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Endorsements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>